# openrelik-worker-llm

./: Dockerfile  README.md  pyproject.toml
src/: app.py  prompt.py  tasks.py
