[tool.poetry]
name = "openrelik-worker-llm"
version = "0.1.0"
description = "OpenRelik LLM Worker"
authors = ["Benjamin Koffel <benjaminkoffel@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
celery = { extras = ["redis"], version = "^5.3.6" }
openrelik-worker-common = "^0.10.0"
openrelik-ai-common = "~0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
